[gd_scene load_steps=12 format=3 uid="uid://b5a73opvaoc6t"]

[ext_resource type="Script" uid="uid://ba3lu1wlqqxu8" path="res://scripts/fase_2_1.gd" id="1_y00ys"]
[ext_resource type="Texture2D" uid="uid://dnjia0bbruoni" path="res://assets/backgrounds/fundo jogo.png" id="2_fa6bd"]
[ext_resource type="Texture2D" uid="uid://bmxeirivvp3th" path="res://assets/btn.png" id="3_dv5hw"]
[ext_resource type="AudioStream" uid="uid://dlfim2ja4ogdy" path="res://assets/audios/Som-de-clique-de-mouse-Efeito-Sonoro.ogg" id="4_6a52b"]
[ext_resource type="Texture2D" uid="uid://cbx21x5lk1f2n" path="res://assets/explicacao.png" id="4_vnpdm"]
[ext_resource type="Texture2D" uid="uid://n2nyl5aulady" path="res://assets/b.png" id="5_laqsi"]
[ext_resource type="Texture2D" uid="uid://b520fpjml6888" path="res://assets/continuar.png" id="6_ffrmu"]
[ext_resource type="Texture2D" uid="uid://cnu1yutyyx6mm" path="res://assets/aaaaaaaaa.png" id="6_laqsi"]
[ext_resource type="Texture2D" uid="uid://bgjymdob6np7o" path="res://assets/alternativa.png" id="8_55jb5"]
[ext_resource type="Texture2D" uid="uid://p4jhd6e5nf76" path="res://assets/recomecar.png" id="8_ffrmu"]
[ext_resource type="Texture2D" uid="uid://j17etteclu73" path="res://assets/resposta certa.png" id="9_7smbl"]

[node name="Fase21" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y00ys")

[node name="fundo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 646.0
texture = ExtResource("2_fa6bd")

[node name="explicacao_container" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="titulo_label" type="TextureRect" parent="explicacao_container"]
layout_mode = 0
offset_left = 49.0
offset_top = 3.0
offset_right = 392.0
offset_bottom = 73.0
texture = ExtResource("3_dv5hw")

[node name="TextureRect" type="TextureRect" parent="explicacao_container/titulo_label"]
layout_mode = 0
offset_left = 48.0
offset_top = 4.0
offset_right = 281.0
offset_bottom = 49.0
texture = ExtResource("4_vnpdm")

[node name="texto_label" type="TextureRect" parent="explicacao_container"]
layout_mode = 0
offset_left = 44.0
offset_top = 62.0
offset_right = 1112.0
offset_bottom = 541.0
texture = ExtResource("5_laqsi")

[node name="TextureRect" type="TextureRect" parent="explicacao_container/texto_label"]
layout_mode = 0
offset_left = 44.0
offset_top = 4.0
offset_right = 1051.0
offset_bottom = 427.0
texture = ExtResource("6_laqsi")

[node name="button_continuar" type="TextureButton" parent="explicacao_container"]
layout_mode = 0
offset_left = 409.0
offset_top = 511.0
offset_right = 741.0
offset_bottom = 589.0
texture_normal = ExtResource("3_dv5hw")
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="explicacao_container/button_continuar"]
layout_mode = 0
offset_left = 79.0
offset_top = 12.0
offset_right = 249.0
offset_bottom = 52.0
texture = ExtResource("6_ffrmu")

[node name="quiz_container" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="pergunta_label" type="Label" parent="quiz_container"]
layout_mode = 0
offset_left = 489.0
offset_top = 47.0
offset_right = 621.0
offset_bottom = 70.0

[node name="opcoes_container" type="VBoxContainer" parent="quiz_container"]
layout_mode = 0
offset_left = 367.0
offset_top = 205.0
offset_right = 512.0
offset_bottom = 350.0

[node name="opcao_1" type="TextureButton" parent="quiz_container/opcoes_container"]
layout_mode = 2
texture_normal = ExtResource("8_55jb5")

[node name="label" type="Label" parent="quiz_container/opcoes_container/opcao_1"]
layout_mode = 0
offset_left = 98.0
offset_top = 14.0
offset_right = 138.0
offset_bottom = 37.0

[node name="opcao_2" type="TextureButton" parent="quiz_container/opcoes_container"]
layout_mode = 2
texture_normal = ExtResource("9_7smbl")

[node name="label" type="Label" parent="quiz_container/opcoes_container/opcao_2"]
layout_mode = 0
offset_left = 99.0
offset_top = 23.0
offset_right = 139.0
offset_bottom = 46.0

[node name="opcao_3" type="TextureButton" parent="quiz_container/opcoes_container"]
layout_mode = 2
texture_normal = ExtResource("8_55jb5")

[node name="label" type="Label" parent="quiz_container/opcoes_container/opcao_3"]
layout_mode = 0
offset_left = 89.0
offset_top = 18.0
offset_right = 129.0
offset_bottom = 41.0

[node name="feedback_label" type="Label" parent="quiz_container"]
layout_mode = 0
offset_left = 836.0
offset_top = 259.0
offset_right = 876.0
offset_bottom = 282.0

[node name="button_continuar" type="TextureButton" parent="quiz_container"]
layout_mode = 0
offset_left = 889.0
offset_top = 467.0
offset_right = 1237.0
offset_bottom = 545.0
texture_normal = ExtResource("3_dv5hw")

[node name="TextureRect" type="TextureRect" parent="quiz_container/button_continuar"]
layout_mode = 0
offset_left = 41.0
offset_top = 6.0
offset_right = 211.0
offset_bottom = 46.0
texture = ExtResource("6_ffrmu")

[node name="button_restart" type="TextureButton" parent="quiz_container"]
layout_mode = 0
offset_left = 889.0
offset_top = 468.0
offset_right = 1147.0
offset_bottom = 546.0
texture_normal = ExtResource("8_ffrmu")

[node name="label_vitoria" type="Label" parent="."]
layout_mode = 0
offset_left = 508.0
offset_top = 294.0
offset_right = 548.0
offset_bottom = 317.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6a52b")
